@@ -70,6 +70,8 @@ AbstractPlayerObject::AbstractPlayerObject( const int id )
       M_body_count( 1000 ),
       M_face( 0.0 ),
       M_face_count( 1000 ),
+      M_pointto_angle( 0.0 ),
+      M_pointto_count( 1000 ),
       M_kicking( false ),
       M_dist_from_ball( 1000.0 ),
       M_angle_from_ball( 0.0 ),
@@ -107,6 +109,8 @@ AbstractPlayerObject::AbstractPlayerObject( const int id,
       M_body_count( 1000 ),
       M_face( 0.0 ),
       M_face_count( 1000 ),
+      M_pointto_angle( 0.0 ),
+      M_pointto_count( 1000 ),
       M_kicking( false ),
       M_dist_from_ball( 1000.0 ),
       M_angle_from_ball( 0.0 ),
